syntax = "proto3";

package ping.v1;

service PingAPI {
    rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
}

message PingResponse {
    string message = 1;
}
